<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.uclouvain.lsinf1225.v.bartender.gui.ShowDetailsActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailList"
        android:layout_alignTop="@+id/tableList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:id="@+id/action_annule_button"
        android:layout_alignTop="@+id/tableList"
        android:layout_alignLeft="@+id/refresh_button"
        android:layout_alignStart="@+id/refresh_button"
        android:layout_marginTop="67dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_payed"
        android:id="@+id/set_payed"
        android:layout_below="@+id/refresh_button"
        android:layout_alignLeft="@+id/refresh_button"
        android:layout_alignStart="@+id/refresh_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        android:id="@+id/refresh_button"
        android:layout_below="@+id/action_annule_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtDetails"
        android:layout_above="@+id/action_annule_button"
        android:layout_alignRight="@+id/action_annule_button"
        android:layout_alignEnd="@+id/action_annule_button"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="138dp" />

</RelativeLayout>
